Bug 222045 - missing minimize buttons if I change from netbook to desktop mode
Summary: missing minimize buttons if I change from netbook to desktop mode
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-10 13:05 UTC by sts
Modified: 2010-10-26 16:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments
Screenshot (86.98 KB, image/jpeg)
2010-01-10 13:08 UTC, sts
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sts 2010-01-10 13:05:19 UTC
Version:           1.4 (using 4.3.90 (KDE 4.3.90 (KDE 4.4 RC1)) "release 210", KDE:KDE4:Factory:Desktop / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.31.8-0.1-desktop

I've lost my minimize button if I change back from netbook to desktop mode.

see attachment for more
Comment 1 sts 2010-01-10 13:08:08 UTC
Created attachment 39733 [details]
Screenshot
Comment 2 Martin Flöser 2010-01-10 13:08:55 UTC
Alt+F3 in the window -> Advanced -> Uncheck "No borders"
Comment 3 Martin Flöser 2010-01-10 13:10:37 UTC
(In reply to comment #2)
> Alt+F3 in the window -> Advanced -> Uncheck "No borders"
Forget this comment

As you can see, the Minimize button is not in your list. Just add it again. The buttons are by default not changed.
Comment 4 sts 2010-01-10 15:30:28 UTC
ok, the problem is he set the checkbox for custom setting.. you can reproduce it if you uncheck this.. change to netbook and back to custom.
Comment 5 sts 2010-01-10 15:38:56 UTC
please replace "back to custom" with and back to desktop.. :)
Comment 6 Martin Flöser 2010-10-26 16:42:25 UTC
SVN commit 1189981 by graesslin:

Unset noBorder when switching from Netbook to Desktop Shell.

Check on reloading of settings if the no borders for maximized windows option got disabled.
If it got disabled unset the no border option for all maximized windows to get the borders back.
BUG: 222045
FIXED-IN: 4.6.0

 M  +5 -0      client.cpp  
 M  +1 -0      client.h  
 M  +16 -0     workspace.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189981